package com.dev.hanji

import android.content.Context
import android.graphics.PathMeasure
import android.util.Log
import androidx.compose.ui.geometry.Offset
import androidx.compose.ui.graphics.Color
import androidx.core.graphics.PathParser
import androidx.lifecycle.ViewModel
import kotlinx.coroutines.flow.MutableStateFlow
import kotlinx.coroutines.flow.asStateFlow
import kotlinx.coroutines.flow.update

data class DrawingState(
    val selectedColor: Color = Color.Black,
    val currentPath: PathData? = null,
    val paths: List<PathData> = emptyList(),
)

data class PathData(
    val id: String,
    val color: Color,
    val path: List<Offset>,
)

sealed interface DrawingAction {
    data object OnNewPathStart: DrawingAction
    data class OnDraw(val offset: Offset): DrawingAction
    data object OnPathEnd: DrawingAction
    data object OnClearCanvasClick: DrawingAction

    }

class DrawingViewModel : ViewModel() {
    private val _state = MutableStateFlow(DrawingState())
    val state = _state.asStateFlow()

    fun onAction(action: DrawingAction) {
        when(action) {
            DrawingAction.OnClearCanvasClick -> {
                onClearCanvasClick()
            }
            is DrawingAction.OnDraw -> {
                onDraw(action.offset)
            }
            DrawingAction.OnNewPathStart -> {
                onNewPathStart()
            }
            DrawingAction.OnPathEnd -> {
                onPathEnd()
            }

        }
    }



    private fun onPathEnd() {
        val currentPath = state.value.currentPath ?: return

        _state.update { it.copy(
            currentPath = null,
            paths = it.paths + currentPath,
        )}
    }

    private fun onNewPathStart() {
        _state.update {
            it.copy(
                currentPath = PathData(
                    id = System.currentTimeMillis().toString(),
                    color = it.selectedColor,
                    path = emptyList()
                )
            )
        }
    }

    private fun onDraw(offset: Offset) {
        val currentPath = state.value.currentPath ?: return
        _state.update { it.copy(
            currentPath = currentPath.copy(
                path = currentPath.path + offset
            )
        )}
    }

    private fun onClearCanvasClick() {
        _state.update {
            it.copy(
                currentPath = null,
                paths = emptyList()
            )
        }
    }
}