@startuml
class com.dev.hanji.achievements.AchievementViewModel {
-  _achievements
+ StateFlow<List<AchievementEntity>> achievements
+ StateFlow<Int> completedAchievements
- void loadAchievements()
}


class com.dev.hanji.desirializers.KanjiEntityDeserializer {
+ KanjiEntity deserialize(JsonElement,Type,JsonDeserializationContext)
- List<String> parseList(JsonObject,String)
}

class com.dev.hanji.kanji.KanjiEntity {
}
class com.dev.hanji.kanji.KanjiConverters {
+ String convertListToString(List<String>)
+ List<String> convertStringToList(String)
}

class com.dev.hanji.database.AppDatabase$Companion {
- AppDatabase? INSTANCE
+ AppDatabase getInstance(Context)
}


abstract class com.dev.hanji.database.AppDatabase {
+ UserDao userDao
+ AchievementDao achievementDao
+ KanjiDao kanjiDao
+ KanjiPackDao kanjiPackDao
}

class com.dev.hanji.kanji.null {
}
interface com.dev.hanji.HanjiDestination {
+ ImageVector icon
+ String route
+ String title
}

class com.dev.hanji.Home {
+ ImageVector icon
+ String route
+ String title
}

class com.dev.hanji.Packs {
+ ImageVector icon
+ String route
+ String title
}

class com.dev.hanji.User {
+ ImageVector icon
+ String route
+ String title
}

class com.dev.hanji.About {
+ ImageVector icon
+ String route
+ String title
}

class com.dev.hanji.Settings {
+ ImageVector icon
+ String route
+ String title
}

class com.dev.hanji.UserStats {
+ String route
+ ImageVector icon
+ String title
}

class com.dev.hanji.UserAchievements {
+ String route
+ ImageVector icon
+ String title
}

class com.dev.hanji.Draw {
+ String route
+ ImageVector icon
+ String title
}

class com.dev.hanji.AllPacks {
+ String route
+ ImageVector icon
+ String title
}

class com.dev.hanji.MyPacks {
+ String route
+ ImageVector icon
+ String title
}

class com.dev.hanji.CreatePack {
+ String route
+ ImageVector icon
+ String title
}

class com.dev.hanji.PackDetail {
+ String route
+ ImageVector icon
+ String title
}

class com.dev.hanji.kanjiPack.KanjiPackEntity {
}
class com.dev.hanji.kanjiPack.KanjiPackCrossRef {
}
class com.dev.hanji.kanjiPack.KanjiWithPacks {
}
class com.dev.hanji.kanjiPack.PackWithKanji {
+ Int kanjiCount
}

interface com.dev.hanji.kanji.KanjiDao {
+ void insert(List<KanjiEntity>)
+ Int getKanjiCount()
}

class com.dev.hanji.kanjiPack.KanjiPackState {
}
class com.dev.hanji.kanjiPack.KanjiPackStateById {
}
class com.dev.hanji.HanjiActivity {
+ void onCreate(Bundle?)
}

enum com.dev.hanji.achievements.TypeAchievement {
+  TOTAL_KANJI
+  LOGIN_DAY
}

class com.dev.hanji.achievements.AchievementEntity {
}
interface com.dev.hanji.user.UserDao {
+ void insert(UserEntity)
+ void update(UserEntity)
+ void updateUserAttempts(Int,Int,Int,Int)
+ Flow<UserEntity?> get()
+ void delete(UserEntity)
}

class com.dev.hanji.kanjiPack.KanjiPackViewModel {
-  _state
-  _kanjiPackDetailState
-  _kanjiPacks
-  _kanjiPackWithKanjiListById
+  state
+  packDetailState
+ void onEvent(KanjiPackEvent)
}


class com.dev.hanji.DrawingState {
}
class com.dev.hanji.PathData {
}
class com.dev.hanji.DrawingAction$OnNewPathStart {
}
class com.dev.hanji.DrawingAction$OnDraw {
}
class com.dev.hanji.DrawingAction$OnPathEnd {
}
class com.dev.hanji.DrawingAction$OnClearCanvasClick {
}
interface com.dev.hanji.DrawingAction {
}
class com.dev.hanji.DrawingViewModel {
-  _state
+  state
+ void onAction(DrawingAction)
- void onPathEnd()
- void onNewPathStart()
- void onDraw(Offset)
- void onClearCanvasClick()
}


class com.dev.hanji.achievements.AchievementsProvider {
+  achievements
}

class com.dev.hanji.kanjiPack.KanjiPackEvent$SaveKanjiPack {
}
class com.dev.hanji.kanjiPack.KanjiPackEvent$SetKanjiPackName {
}
class com.dev.hanji.kanjiPack.KanjiPackEvent$SetKanjiDescription {
}
class com.dev.hanji.kanjiPack.KanjiPackEvent$SetKanjiCharacters {
}
class com.dev.hanji.kanjiPack.KanjiPackEvent$DeleteKanjiPack {
}
interface com.dev.hanji.kanjiPack.KanjiPackEvent {
}
class com.dev.hanji.user.UserViewModel {
-  fakeUser
-  _user
+ StateFlow<UserEntity> user
+ StateFlow<Int> totalAttempts
}

interface com.dev.hanji.kanjiPack.KanjiPackDao {
+ void insertPack(KanjiPackEntity)
+ Long upsertPack(KanjiPackEntity)
+ void insertKanji(KanjiEntity)
+ void insertKanjiPackCrossRef(List<KanjiPackCrossRef>)
+ void deletePack(KanjiPackEntity)
+ Flow<List<KanjiPackEntity>> getAllPacks()
+ Flow<KanjiPackEntity> getPackById(Long)
+ Flow<List<PackWithKanji>> getAllPacksWithKanji()
+ Flow<PackWithKanji> getKanjiListByPackId(Long)
}

enum com.dev.hanji.user.TypeAttempt {
+  BAD
+  NORMAL
+  GOOD
+  GREAT
}

interface com.dev.hanji.user.UserAttempt {
+ TypeAttempt type
+ Int count
+ Color color
}

class com.dev.hanji.user.ConcreteUserAttempt {
}
class com.dev.hanji.user.UserEntity {
+ List<UserAttempt> attempts
}

class com.dev.hanji.ui.theme.ColorFamily {
}
interface com.dev.hanji.achievements.AchievementDao {
+ void insert(AchievementEntity)
+ void update(AchievementEntity)
+ Flow<AchievementEntity> get()
+ void delete(AchievementEntity)
}

class com.dev.hanji.achievements.AchievementViewModelFactory {
+ T create(Class<T>)
}

class com.dev.hanji.user.UserViewModelFactory {
+ T create(Class<T>)
}

class com.dev.hanji.kanjiPack.KanjiPackFactory {
+ T create(Class<T>)
}



androidx.lifecycle.ViewModel <|-- com.dev.hanji.achievements.AchievementViewModel
com.google.gson.JsonDeserializer <|.. com.dev.hanji.desirializers.KanjiEntityDeserializer
com.dev.hanji.database.AppDatabase +.. com.dev.hanji.database.AppDatabase$Companion
androidx.room.RoomDatabase <|-- com.dev.hanji.database.AppDatabase
com.dev.hanji.kanji.TypeToken <|-- com.dev.hanji.kanji.null
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.Home
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.Packs
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.User
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.About
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.Settings
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.UserStats
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.UserAchievements
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.Draw
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.AllPacks
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.MyPacks
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.CreatePack
com.dev.hanji.HanjiDestination <|.. com.dev.hanji.PackDetail
androidx.activity.ComponentActivity <|-- com.dev.hanji.HanjiActivity
androidx.lifecycle.ViewModel <|-- com.dev.hanji.kanjiPack.KanjiPackViewModel
com.dev.hanji.DrawingAction +.. com.dev.hanji.DrawingAction$OnNewPathStart
com.dev.hanji.DrawingAction <|.. com.dev.hanji.DrawingAction$OnNewPathStart
com.dev.hanji.DrawingAction +.. com.dev.hanji.DrawingAction$OnDraw
com.dev.hanji.DrawingAction <|.. com.dev.hanji.DrawingAction$OnDraw
com.dev.hanji.DrawingAction +.. com.dev.hanji.DrawingAction$OnPathEnd
com.dev.hanji.DrawingAction <|.. com.dev.hanji.DrawingAction$OnPathEnd
com.dev.hanji.DrawingAction +.. com.dev.hanji.DrawingAction$OnClearCanvasClick
com.dev.hanji.DrawingAction <|.. com.dev.hanji.DrawingAction$OnClearCanvasClick
androidx.lifecycle.ViewModel <|-- com.dev.hanji.DrawingViewModel
com.dev.hanji.kanjiPack.KanjiPackEvent +.. com.dev.hanji.kanjiPack.KanjiPackEvent$SaveKanjiPack
com.dev.hanji.kanjiPack.KanjiPackEvent <|.. com.dev.hanji.kanjiPack.KanjiPackEvent$SaveKanjiPack
com.dev.hanji.kanjiPack.KanjiPackEvent +.. com.dev.hanji.kanjiPack.KanjiPackEvent$SetKanjiPackName
com.dev.hanji.kanjiPack.KanjiPackEvent <|.. com.dev.hanji.kanjiPack.KanjiPackEvent$SetKanjiPackName
com.dev.hanji.kanjiPack.KanjiPackEvent +.. com.dev.hanji.kanjiPack.KanjiPackEvent$SetKanjiDescription
com.dev.hanji.kanjiPack.KanjiPackEvent <|.. com.dev.hanji.kanjiPack.KanjiPackEvent$SetKanjiDescription
com.dev.hanji.kanjiPack.KanjiPackEvent +.. com.dev.hanji.kanjiPack.KanjiPackEvent$SetKanjiCharacters
com.dev.hanji.kanjiPack.KanjiPackEvent <|.. com.dev.hanji.kanjiPack.KanjiPackEvent$SetKanjiCharacters
com.dev.hanji.kanjiPack.KanjiPackEvent +.. com.dev.hanji.kanjiPack.KanjiPackEvent$DeleteKanjiPack
com.dev.hanji.kanjiPack.KanjiPackEvent <|.. com.dev.hanji.kanjiPack.KanjiPackEvent$DeleteKanjiPack
androidx.lifecycle.ViewModel <|-- com.dev.hanji.user.UserViewModel
com.dev.hanji.user.UserAttempt <|.. com.dev.hanji.user.ConcreteUserAttempt
com.dev.hanji.achievements.Factory <|.. com.dev.hanji.achievements.AchievementViewModelFactory
com.dev.hanji.user.Factory <|.. com.dev.hanji.user.UserViewModelFactory
com.dev.hanji.kanjiPack.Factory <|.. com.dev.hanji.kanjiPack.KanjiPackFactory
@enduml